--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@
       margin-bottom: 60px; 
       padding: 10px 20px 15px; 
       color:black;
-      background-color: white; 
+      background-color: white;
+    }
     
- 
-  
+    
